# simple-school-website-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  example.env  pyproject.toml
app/: main.py
app/api/v1/: admin_router.py  student_router.py  teacher_router.py
app/core/: caching.py  celery_app.py  config.py  dependencies.py  logging.py  security.py
app/db/: database.py  init_db.py
app/models/: models.py  schemas.py
app/repositories/: admin_repo.py  auth_repo.py  student_repo.py  teacher_repo.py
app/worker/: tasks.py
tests/: conftest.py  test_auth.py  test_concurrency.py
